added unified CK workflow

--- a/dissemination.publication/e7cc77d72f13441e/paper.tex
+++ b/dissemination.publication/e7cc77d72f13441e/paper.tex
@@ -128,7 +128,7 @@ Details: \url{http://cTuning.org/ae/submission_extra.html}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Description}
 
-\subsubsection{How delivered}
+\subsubsection{How to obtain}
 AWS Public Deep Learning Image containing pre-built BVLC Caffe, IntelCaffe GitHub.
 \subsubsection{Hardware dependencies}
 Amazon AWS c5.18xlarge instance.
