--- a/dissemination.publication/e7cc77d72f13441e/paper.tex
+++ b/dissemination.publication/e7cc77d72f13441e/paper.tex
@@ -41,7 +41,7 @@
 
 \title{Highly Efficient 8-bit Low Precision Inference of Convolutional Neural Networks with IntelCaffe \\}
 
-\author{Jiong Gong, Jiong Gong, Haihao Shen, Guoming Zhang, Xiaoli Liu, Shane Li, Ge Jin, Niharika Maheshwari, Evarist Fomenko, Eden Segal}
+\author{Jiong Gong, Haihao Shen, Guoming Zhang, Xiaoli Liu, Shane Li, Ge Jin, Niharika Maheshwari, Evarist Fomenko, Eden Segal}
 \affiliation{%
   \institution{Intel Corporation}
 }
