added more meta info

--- a/dissemination.publication/e7cc77d72f13441e/paper.tex
+++ b/dissemination.publication/e7cc77d72f13441e/paper.tex
@@ -39,7 +39,7 @@
 
 \begin{document}
 
-\title{Highly Efficient 8-bit Low Precision Inference of Convolutional Neural Networks with IntelCaffe \\}
+\title{Highly Efficient 8-bit Low Precision Inference of Convolutional Neural Networks with IntelCaffe}
 
 \author{Jiong Gong, Haihao Shen, Guoming Zhang, Xiaoli Liu, Shane Li, Ge Jin, Niharika Maheshwari, Evarist Fomenko, Eden Segal}
 \affiliation{%
