adding some extra info about artifacts (size, time to build and run, license)

--- a/dissemination.publication/e7cc77d72f13441e/paper.tex
+++ b/dissemination.publication/e7cc77d72f13441e/paper.tex
@@ -113,11 +113,11 @@ Details: \url{http://cTuning.org/ae/submission_extra.html}
   \item {\bf Metrics: } \\ Throughput: images per second. \\ Latency: milli-second. \\ Accuracy: \% top-1/top-5/mAP.
   \item {\bf Output: } classification result; execution time; accuracy
   \item {\bf Experiments: } We use batch size 64, 64, and 32 to measure the throughput for ResNet-50, Inception-V3, and SSD respectively. We use batch size 1 to measure the latency.
-  \item {\bf How much disk space required (approximately)?:} 
-  \item {\bf How much time is needed to prepare workflow (approximately)?:} 
-  \item {\bf How much time is needed to complete experiments (approximately)?:}
+  \item {\bf How much disk space required (approximately)?:} ~800MB
+  \item {\bf How much time is needed to prepare workflow (approximately)?:} About 1 hour to download libraries and compile them on device
+  \item {\bf How much time is needed to complete experiments (approximately)?:} About 1 hour for the original benchmark
   \item {\bf Publicly available?:} Yes
-  \item {\bf Code license?:} 
+  \item {\bf Code license?:} MIT license
   \item {\bf Collective Knowledge workflow framework used?:} Yes
   \item {\bf CK workflow URL:} \url{https://github.com/ctuning/ck-request-asplos18-caffe-intel}
   \item {\bf CK results URL:} \url{https://github.com/ctuning/ck-request-asplos18-results-caffe-intel}
