--- a/dissemination.publication/e7cc77d72f13441e/paper.tex
+++ b/dissemination.publication/e7cc77d72f13441e/paper.tex
@@ -25,7 +25,7 @@
 \acmDOI{10.1145/3229762.3229763}
 
 % ISBN
-% \acmISBN{123-4567-24-567/08/06}
+\acmISBN{978-1-4503-5923-8}
 
 %Conference
 \acmConference[ReQuEST at ASPLOS'18]{1st ACM Reproducible Quality-Efficient Systems Tournament on Co-designing Pareto-efficient Deep Learning}{March 2018}{Williamsburg, VA, USA}
